--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/anoncreds/anoncreds-wrapper-javascript"
   },
   "engines": {
-    "node": ">= 18"
+    "node": ">= 20"
   },
   "scripts": {
     "style:check": "biome check --unsafe .",
@@ -15,7 +15,7 @@
     "types:check": "pnpm -r check-types",
     "build": "pnpm -r build",
     "clean": "pnpm -r clean",
-    "test": "node --import tsx --test packages/**/tests/*.test.ts",
+    "test": "vitest",
     "release": "pnpm build && pnpm changeset publish --no-git-tag",
     "changeset-version": "pnpm changeset version && pnpm style:fix"
   },
@@ -24,8 +24,9 @@
     "@changesets/cli": "catalog:",
     "@types/node": "catalog:",
     "rimraf": "catalog:",
-    "tsx": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vite-tsconfig-paths": "catalog:",
+    "vitest": "catalog:"
   },
-  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
+  "packageManager": "pnpm@10.29.2"
 }
