--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,11 +1,20 @@
 packages:
-  - "packages/*"
-  - "examples/*"
+  - packages/*
+  - examples/*
 
 catalog:
-  typescript: ~5.4.5
-  tsx: ^4.19.2
+  '@biomejs/biome': 1.9.4
+  '@changesets/cli': ^2.27.12
+  '@types/node': ^20.12.11
+  koffi: ^2.15.1
   rimraf: ^5.0.5
-  "@biomejs/biome": 1.9.4
-  "@types/node": ^20.12.11
-  "@changesets/cli": ^2.27.12
+  typescript: ~5.4.5
+  vite-tsconfig-paths: ^5.1.4
+  vitest: ^4.0.12
+
+ignoredBuiltDependencies:
+  - esbuild
+
+onlyBuiltDependencies:
+  - '@biomejs/biome'
+  - koffi
